--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/rogerpq/Repthon-/",
+  "repository": "https://github.com/rogerpq/Repthon_userboot/",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
